--- a/HomeManager/View/Personen/ucPersoon.xaml
+++ b/HomeManager/View/Personen/ucPersoon.xaml
@@ -2,6 +2,7 @@
     x:Class="HomeManager.View.ucPersoon"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Converters="clr-namespace:HomeManager.Converter"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:HomeManager.View"
@@ -11,10 +12,14 @@
     d:DesignWidth="800"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
+    <UserControl.Resources>
+        <Converters:DateOnlyToDateTimeConverter x:Key="DateOnlyToDateTimeConverter" />
+    </UserControl.Resources>
+
     <Grid DataContext="{Binding Source={StaticResource VML}, Path=PersoonViewModel}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="250" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
@@ -66,46 +71,51 @@
             </Grid>
         </Border>
 
-        <ListView
+        <ListBox
             Name="UserListView"
             Grid.Row="2"
             Grid.RowSpan="11"
             Grid.Column="1"
-            ItemsSource="{Binding MijnCollectie}">
-            <ListView.ItemTemplate>
+            Width="250"
+            ItemsSource="{Binding MijnCollectie}"
+            SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+            <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Border
+                        Width="205"
                         Margin="5"
-                        Padding="5"
+                        Padding="2"
                         Background="LightGray"
                         BorderBrush="Gray"
                         BorderThickness="1"
                         CornerRadius="8">
                         <StackPanel Orientation="Horizontal">
-                            <!--  Foto van de persoon, met standaardafbeelding als er geen foto is  -->
-                            <Image
-                                Source="{Binding MijnSelectedItem.Foto}"
-                                Width="50"
-                                Height="50"
-                                Margin="5" >
-                                <i:Interaction.Triggers>
-                                    <i:EventTrigger EventName="MouseLeftButtonUp">
-                                        <i:InvokeCommandAction Command="{Binding cmdShowPicture}" />
-                                    </i:EventTrigger>
-                                </i:Interaction.Triggers>
-                            </Image>
+
+                            <Border
+                                Width="60"
+                                Height="60"
+                     
+                                HorizontalAlignment="Left"
+                                BorderBrush="Gray"
+                                BorderThickness="1"
+                                CornerRadius="30">
+                                <Border.Background>
+                                    <ImageBrush ImageSource="{Binding Foto, TargetNullValue={x:Null}}" Stretch="UniformToFill" />
+                                </Border.Background>
+
+                            </Border>
 
 
-                            <!--  Naam en voornaam  -->
                             <StackPanel Margin="10,0,0,0" Orientation="Vertical">
-                                <TextBlock FontWeight="Bold" Text="{Binding Naam}" />
-                                <TextBlock Text="{Binding Voornaam}" />
+                                <TextBlock FontWeight="Bold" Text="{Binding Naam}" 
+                                           Margin="0,5,0,8"/>
+                                <TextBlock Text="{Binding Voornaam}"  Margin="0,8,0,0"/>
                             </StackPanel>
                         </StackPanel>
                     </Border>
                 </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+            </ListBox.ItemTemplate>
+        </ListBox>
 
 
         <TextBlock
@@ -155,7 +165,7 @@
                 BorderThickness="1"
                 CornerRadius="35">
                 <Border.Background>
-                    <ImageBrush ImageSource="\Images\person1.jpg" Stretch="UniformToFill" />
+                    <ImageBrush ImageSource="{Binding MijnSelectedItem.Foto, TargetNullValue={x:Null}}" Stretch="UniformToFill" />
                 </Border.Background>
             </Border>
             <Button Command="{Binding cmdUploadPicture}" Style="{StaticResource UploadPersoonButton}" />
@@ -176,20 +186,10 @@
             Grid.Row="5"
             Grid.Column="3"
             Margin="5"
-            SelectedDate="{Binding MijnSelectedItem.Geboortedatum, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-            SelectedDateFormat="Short">
-            <DatePicker.Resources>
-                <Style TargetType="DatePickerTextBox">
-                    <Setter Property="Control.Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="DatePickerTextBox">
-                                <TextBox x:Name="txtGeboorteDatum" Text="{Binding Path=SelectedDate, StringFormat=d-M-yyyy, RelativeSource={RelativeSource AncestorType=DatePicker}}" />
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </DatePicker.Resources>
-        </DatePicker>
+            SelectedDate="{Binding MijnSelectedItem.Geboortedatum, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource DateOnlyToDateTimeConverter}}"
+            SelectedDateFormat="Short" />
+
+
 
         <TextBlock
             x:Name="txtBenJeGebruiker"
@@ -203,6 +203,6 @@
             Grid.Row="6"
             Grid.Column="3"
             Margin="5"
-            IsChecked="{Binding MijnSelectedItem.IsApplicationUser, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            IsChecked="{Binding MijnSelectedItem.IsApplicationUser, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
     </Grid>
 </UserControl>
