--- a/HomeManager/MainWindow.xaml
+++ b/HomeManager/MainWindow.xaml
@@ -6,8 +6,6 @@
     xmlns:VM="clr-namespace:HomeManager.ViewModel"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:HomeManager"
-    xmlns:V="clr-namespace.HomeManager.View"
-    xmlns:VM="clr-namespace.HomeManger.ViewModel"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:uc="clr-namespace:HomeManager.View"
     Title="MainWindow"
@@ -22,8 +20,8 @@
 
     <Window.Resources>
 
-        <DataTemplate DataType="{x:Type VM:clsCategoryViewModel}">
-            <V:ucBudgetCategorie />
+        <DataTemplate DataType="{x:Type VM:clsCategorieViewModel}">
+            <V:ucCategorie />
         </DataTemplate>
 
         <Storyboard x:Key="ShowMenu">
