--- a/HomeManager/MainWindow.xaml
+++ b/HomeManager/MainWindow.xaml
@@ -7,7 +7,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:HomeManager"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:uc="clr-namespace:HomeManager.View"
     Title="MainWindow"
     Width="1000"
     Height="900"
@@ -70,7 +69,7 @@
         </Grid.ColumnDefinitions>
 
 
-        <uc:ucTitlePerson
+        <V:ucTitlePerson
             Grid.ColumnSpan="2"
             Margin="0,0,10,0"
             HorizontalAlignment="Right"
@@ -118,7 +117,11 @@
                     Orientation="Vertical">
                     <Expander Style="{StaticResource myHamburgerPersonen}">
                         <StackPanel x:Name="stckPerson">
-                            <Button Content="Persoon" Command="{Binding NavCommand}" CommandParameter="clsPersoonVM" Style="{StaticResource myExpanderPerson}" />
+                            <Button
+                                Command="{Binding NavCommand}"
+                                CommandParameter="clsPersoonVM"
+                                Content="Persoon"
+                                Style="{StaticResource myExpanderPerson}" />
                             <Button Content="EmailType" Style="{StaticResource myMenuTandwiel}" />
                             <Button Content="TelefoonType" Style="{StaticResource myMenuTandwiel}" />
                             <Button Content="Land" Style="{StaticResource myMenuTandwiel}" />
@@ -208,7 +211,7 @@
             Unchecked="ToggleButton_Unchecked" />
 
         <!--#endregion-->
-        
+
         <ContentControl
             Grid.Row="1"
             Grid.Column="1"
