--- a/HomeManager/View/ucTitlePerson.xaml
+++ b/HomeManager/View/ucTitlePerson.xaml
@@ -9,7 +9,7 @@
     d:DesignWidth="120"
     Background="{StaticResource myTitleBar}"
     mc:Ignorable="d">
-    <Grid>
+    <Grid DataContext="{Binding Source={StaticResource VML}, Path=TitlePersonViewModel}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="50" />
             <ColumnDefinition Width="*" />
@@ -44,7 +44,7 @@
             <TextBlock
                 FontSize="12"
                 Foreground="White"
-                Text="Peter" />
+                Text="{Binding Naam, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <TextBlock
                 FontSize="10"
                 Foreground="White"
